src/main/resources/kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: liquibase-project
spec:
  ports:
    - port: 8888
      targetPort: 8888
  selector:
    app: liquibase-project
---
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  ports:
    - port: 5432
  selector:
    app: postgres
---
apiVersion: v1
kind: Service
metadata:
  name: sonarqube
spec:
  ports:
    - port: 9000
      targetPort: 9000
  selector:
    app: sonarqube
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
spec:
  ports:
    - port: 9090
      targetPort: 9090
  selector:
    app: prometheus
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: grafana
