src/main/resources/kubernetes/services.yml
apiVersion: v1
kind: Service
metadata:
  name: liquibase-project
spec:
  type: LoadBalancer
  ports:
    - port: 8888
      targetPort: 8888
  selector:
    app: liquibase-project
---
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  ports:
    - port: 5432
  selector:
    app: postgres
